# cFUSE

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  README.md  build_with_cvodes.sh  pyproject.toml  setup.py  test_cvodes_adjoint  test_cvodes_adjoint.cpp  test_dfuse_cvodes.cpp  test_wrapper  test_wrapper.cpp
.github/workflows/: build-dist.yml  ci.yml  python-tests.yml
data/domain_Bow_at_Banff_lumped_era5/forcing/FUSE_input/: Bow_at_Banff_lumped_era5_elev_bands.nc  Bow_at_Banff_lumped_era5_input.nc
data/domain_Bow_at_Banff_lumped_era5/settings/FUSE/: fm_catch.txt  fuse_zDecisions_run_1.txt
data/domain_Bow_at_Banff_lumped_era5/simulations/run_1/FUSE/: Bow_at_Banff_lumped_era5_run_1_dfuse.nc  Bow_at_Banff_lumped_era5_run_1_para_def.nc  Bow_at_Banff_lumped_era5_run_1_runs_def.nc
include/cfuse/: solver.hpp
include/dfuse/: cvodes_adjoint.hpp
python/: bindings.cpp  compare_fortran.py  dfuse_netcdf.py  diagnose_nan.py  optimize_basin.py  optimize_basin_enhanced.py  validate_all_combinations.py
python/dfuse/: __init__.py  cli.py  config.py  io.py  netcdf.py  torch.py
python/optimization_results/: checkpoint_100.pt  checkpoint_150.pt  checkpoint_200.pt  checkpoint_250.pt  checkpoint_300.pt  checkpoint_350.pt  checkpoint_400.pt  checkpoint_450.pt  checkpoint_50.pt  results.json
src/: dfuse_cli.cpp
